--- a/packages/pyright-internal/src/localization/package.mb.en.json
+++ b/packages/pyright-internal/src/localization/package.mb.en.json
@@ -1,6 +1,7 @@
 {
     "Diagnostic": {
-        "argAssignmentParamFunction": "Argument of type \"{argType}\" cannot be assigned to parameter \"{paramName}\" of type \"{paramType}\" in function \"{functionName}\"",
+        "argAssignmentParam": "Argument does not match parameter type for parameter \"{paramName}\"",
+        "argAssignmentParamFunction": "Argument does not match parameter type for parameter \"{paramName}\"",
         "argMissingForParam": "Argument missing for parameter {name}",
         "argMissingForParams": "Arguments missing for parameters {names}",
         "argMorePositionalExpectedCount": "Expected {expected} more positional arguments",
