--- a/packages/pyright-internal/src/localization/package.mb.en.json
+++ b/packages/pyright-internal/src/localization/package.mb.en.json
@@ -6,17 +6,24 @@
         "argMissingForParams": "Arguments missing for parameters {names}",
         "argMorePositionalExpectedCount": "Expected {expected} more positional arguments",
         "booleanIsLowerCase": "\"{name}\" is not defined, did you mean \"{booleanName}\"?",
+        "breakOutsideLoop": "\"break\" can be used only within a loop",
+        "continueOutsideLoop": "\"continue\" can be used only within a loop",
         "expectedCloseBrace": "Missing closing bracket \"}\"",
         "expectedCloseBracket": "Missing closing bracket \"]\"",
         "expectedCloseParen": "Missing closing bracket \")\"",
         "expectedColon": "Missing colon \":\"",
         "expectedEqualityOperator": "Expected equality operator, did you mean \"==\"?",
+        "expectedExpr": "Expected expression",
+        "expectedFunctionName": "Expected function name after \"def\"",
         "expectedIndentedBlock": "Indentation missing",
         "expectedNewlineOrSemicolon": "Unexpected extra content. Statements must be one per line",
+        "importResolveFailure": "Import \"{importName}\" could not be resolved",
         "inconsistentIndent": "Indentation does not match the previous line",
         "stringUnterminated": "String is not closed — missing quotation mark",
         "typeNotSupportBinaryOperator": "Operator \"{operator}\" not supported for this combination of types",
         "typeNotSupportBinaryOperatorBidirectional": "Operator \"{operator}\" not supported for this combination of types",
+        "unaccessedFunction": "Function \"{name}\" is not accessed",
+        "unaccessedImport": "Import \"{name}\" is not accessed",
         "unexpectedIndent": "Unexpected indentation",
         "unreachableCode": "Code is unreachable. The logic of your program means this code will never run"
     }
