--- a/packages/pyright-internal/src/localization/overrides.nls.en-us.json
+++ b/packages/pyright-internal/src/localization/overrides.nls.en-us.json
@@ -8,24 +8,29 @@
         "booleanIsLowerCase": "\"{name}\" is not defined, did you mean \"{booleanName}\"?",
         "breakOutsideLoop": "\"break\" can be used only within a loop",
         "continueOutsideLoop": "\"continue\" can be used only within a loop",
+        "expectedAssignRightHandExpr": "Expected expression to the right of \"=\"",
         "expectedCloseBrace": "Missing closing bracket \"}\"",
         "expectedCloseBracket": "Missing closing bracket \"]\"",
         "expectedCloseParen": "Missing closing bracket \")\"",
         "expectedColon": "Missing colon \":\"",
         "expectedEqualityOperator": "Expected equality operator, did you mean \"==\"?",
-        "expectedExpr": "Expected expression",
-        "expectedFunctionName": "Expected function name after \"def\"",
+        "expectedExpr": "Missing expression",
+        "expectedFunctionName": "Missing function name after \"def\"",
         "expectedIndentedBlock": "Indentation missing",
-        "expectedNewlineOrSemicolon": "Unexpected extra content. Statements must be one per line",
-        "importResolveFailure": "Import \"{importName}\" could not be resolved",
+        "expectedNewlineOrSemicolon": "Unexpected extra content\nStatements must be one per line",
+        "importResolveFailure": "Module \"{importName}\" could not be found",
+        "importSymbolUnknown": "\"{name}\" not found in module \"{moduleName}\"",
         "inconsistentIndent": "Indentation does not match the previous line",
         "stringUnterminated": "String is not closed — missing quotation mark",
         "typeNotIterable": "Type is not iterable",
         "typeNotSupportBinaryOperator": "Operator \"{operator}\" not supported for this combination of types",
         "typeNotSupportBinaryOperatorBidirectional": "Operator \"{operator}\" not supported for this combination of types",
-        "unaccessedFunction": "Function \"{name}\" is not accessed",
-        "unaccessedImport": "Import \"{name}\" is not accessed",
+        "unaccessedClass": "Class \"{name}\" is unused",
+        "unaccessedFunction": "Function \"{name}\" is unused",
+        "unaccessedImport": "Import \"{name}\" is unused",
+        "unaccessedSymbol": "\"{name}\" is unused",
+        "unaccessedVariable": "Variable \"{name}\" is unused",
         "unexpectedIndent": "Unexpected indentation",
-        "unreachableCode": "Code is unreachable. The logic of your program means this code will never run"
+        "unreachableCode": "Code is unreachable\nThe logic of your program means this code will never run"
     }
 }
