--- a/packages/pyright-internal/src/localization/package.nls.en-us.json
+++ b/packages/pyright-internal/src/localization/package.nls.en-us.json
@@ -35,6 +35,7 @@
         "baseClassMethodTypeIncompatible": "Base classes for class \"{classType}\" define method \"{name}\" in incompatible way",
         "baseClassUnknown": "Base class type is unknown, obscuring type of derived class",
         "bindTypeMismatch": "Could not bind method \"{methodName}\" because \"{type}\" is not assignable to parameter \"{paramName}\"",
+        "booleanIsLowerCase": "\"{name}\" is not defined, did you mean \"{booleanName}\"?",
         "breakOutsideLoop": "\"break\" can be used only within a loop",
         "callableExtraArgs": "Expected only two type arguments to \"Callable\"",
         "callableFirstArg": "Expected parameter type list or \"...\"",
@@ -125,6 +126,7 @@
         "expectedDecoratorNewline": "Expected new line at end of decorator",
         "expectedDelExpr": "Expected expression after \"del\"",
         "expectedElse": "Expected \"else\"",
+        "expectedEqualityOperator": "Expected equality operator, did you mean \"==\"?",
         "expectedExceptionClass": "Invalid exception class or object",
         "expectedExceptionObj": "Expected exception object, exception class or None",
         "expectedExpr": "Expected expression",
