We now pass module so update this string.
Mostly just because it makes it easier to track our potentially
upstreamable changes.

--- a/packages/pyright-internal/src/localization/package.nls.en-us.json
+++ b/packages/pyright-internal/src/localization/package.nls.en-us.json
@@ -187,7 +187,7 @@
         "importDepthExceeded": "Import chain depth exceeded {depth}",
         "importResolveFailure": "Import \"{importName}\" could not be resolved",
         "importSourceResolveFailure": "Import \"{importName}\" could not be resolved from source",
-        "importSymbolUnknown": "\"{name}\" is unknown import symbol",
+        "importSymbolUnknown": "\"{name}\" is unknown import symbol in module \"{moduleName}\"",
         "incompatibleMethodOverride": "Method \"{name}\" overrides class \"{className}\" in an incompatible manner",
         "inconsistentIndent": "Unindent amount does not match previous indent",
         "initMustReturnNone": "Return type of \"__init__\" must be None",
