Updated translations (preview quality).

--- a/packages/pyright-internal/src/localization/simplified.nls.zh-tw.json
+++ b/packages/pyright-internal/src/localization/simplified.nls.zh-tw.json
@@ -1,11 +1,11 @@
 {
     "Diagnostic": {
-        "argAssignment": "參數與參數類型不匹配",
-        "argAssignmentFunction": "引數與函數「{functionName}」中的參數類型不匹配",
+        "argAssignment": "引數與參數類型不匹配",
+        "argAssignmentFunction": "引數與函式「{functionName}」中的參數類型不匹配",
         "argAssignmentParam": "引數與參數「{paramName}」中的參數類型不匹配",
         "argAssignmentParamFunction": "引數與參數「{paramName}」中的參數類型不匹配",
         "argMissingForParam": "引數缺少參數 {name}",
-        "argMissingForParams": "引數缺少參數 {name}",
+        "argMissingForParams": "引數缺少參數 {names}",
         "argMorePositionalExpectedCount": "預期還有 {expected} 個位置引數",
         "argMorePositionalExpectedOne": "預期還有 1 個位置引數",
         "argPositional": "預期位置引數",
@@ -13,7 +13,7 @@
         "assignmentTargetExpr": "表達式不能作為指派目標",
         "booleanIsLowerCase": "「{name}」未定義，您指的是「{booleanName}」嗎？",
         "breakOutsideLoop": "「break」只能在「while」或「for」迴圈中使用",
-        "constructorNoArgs": "預期「{type}」構造函數沒有引數",
+        "constructorNoArgs": "預期「{type}」構造函式沒有引數",
         "continueOutsideLoop": "「continue」只能在「while」或「for」迴圈中使用",
         "delTargetExpr": "表達式不能刪除",
         "duplicateParam": "複製參數「{name}」",
@@ -59,7 +59,7 @@
         "moduleNotCallable": "模組不可呼叫",
         "moduleUnknownMember": "「{name}」不是模組「{module}」的已知成員",
         "nonDefaultAfterDefault": "非預設引數跟在預設引數之後",
-        "noOverload": "引述與參數類型不匹配",
+        "noOverload": "引數與參數類型不匹配",
         "objectNotCallable": "物件不可呼叫",
         "obscuredClassDeclaration": "類別「{name}」與另一個同名宣告衝突",
         "obscuredFunctionDeclaration": "函式「{name}」與另一個同名宣告衝突",
