Translation update (preview quality).

--- a/packages/pyright-internal/src/localization/simplified.nls.ko.json
+++ b/packages/pyright-internal/src/localization/simplified.nls.ko.json
@@ -17,8 +17,8 @@
         "continueOutsideLoop": "\"continue\"는 \"while\" 또는 \"for\" 루프에서만 사용될 수 있음",
         "delTargetExpr": "표현식은 삭제할 수 없음",
         "duplicateParam": "매개변수 \"{name}\"(이)가 중복됨",
-        "expectedAssignRightHandExpr": "\"=\" 우측에 표현식이 필요함",
-        "expectedBinaryRightHandExpr": "연산자 우측에 표현식이 필요함",
+        "expectedAssignRightHandExpr": "\"=\" 오른쪽에 표현식이 필요함",
+        "expectedBinaryRightHandExpr": "연산자 오른쪽에 표현식이 필요함",
         "expectedClassName": "클래스 이름이 누락됨",
         "expectedCloseBrace": "닫는 괄호 \"}\"가 누락됨",
         "expectedCloseBracket": "닫는 괄호 \"]\"가 누락됨",
