--- a/packages/pyright-internal/src/localization/simplified.nls.zh-tw.json
+++ b/packages/pyright-internal/src/localization/simplified.nls.zh-tw.json
@@ -10,7 +10,7 @@
         "argMorePositionalExpectedOne": "必須還要有 1 個位置引數",
         "argPositional": "必須要有位置引數",
         "argPositionalExpectedOne": "必須要有 1 個位置引數",
-        "assignmentTargetExpr": "運算式不能作為指派目標",
+        "assignmentTargetExpr": "運算式不能做為指派目標",
         "booleanIsLowerCase": "\"{name}\" 未定義，您指的是 \"{booleanName}\" 嗎？",
         "breakOutsideLoop": "\"break\" 只能在 \"while\" 或 \"for\" 迴圈中使用",
         "constructorNoArgs": "\"{type}\" 構造函式不應有引數",
@@ -18,7 +18,7 @@
         "delTargetExpr": "運算式不能刪除",
         "duplicateParam": "複製參數 \"{name}\"",
         "expectedAssignRightHandExpr": "運算式必須在 \"=\" 的右側",
-        "expectedBinaryRightHandExpr": "運算式必須在運算符的右側",
+        "expectedBinaryRightHandExpr": "運算式必須在運算子的右側",
         "expectedClassName": "缺少類別名稱",
         "expectedCloseBrace": "缺少右括弧 \"}\"",
         "expectedCloseBracket": "缺少右括弧 \"]\"",
@@ -26,7 +26,7 @@
         "expectedColon": "缺少冒號 \":\"",
         "expectedDelExpr": "\"del\" 後缺少運算式",
         "expectedElse": "缺少 \"else\"",
-        "expectedEqualityOperator": "預期的相等運算符，您的意思是 \"==\" 嗎？",
+        "expectedEqualityOperator": "預期的等號比較運算子，您的意思是 \"==\" 嗎？",
         "expectedExpr": "缺少運算式",
         "expectedFunctionName": "\"def\" 後缺少函式名稱",
         "expectedIdentifier": "缺少識別元",
@@ -39,12 +39,12 @@
         "expectedMemberName": "\".\" 後缺少成員名稱",
         "expectedModuleName": "缺少模組名稱",
         "expectedNamedParameter": "關鍵字參數必須接在 \"*\" 後面",
-        "expectedNewlineOrSemicolon": "非預期的額外內容\n敘述必須每行一個",
+        "expectedNewlineOrSemicolon": "非預期的額外內容\n陳述式必須每行一個",
         "expectedOpenParen": "缺少左括弧 \"(\"",
         "expectedParamName": "缺少參數名稱",
         "expectedSliceIndex": "缺少索引或分割",
         "expectedYieldExpr": "yield 表述中應該要有運算式",
-        "globalReassignment": "\"{name}\" 會在全域宣告之前分配",
+        "globalReassignment": "\"{name}\" 會在全域宣告之前指派",
         "globalRedefinition": "\"{name}\" 已經全域宣告",
         "importResolveFailure": "找不到模組 \"{importName}\"",
         "importSymbolUnknown": "在模組 \"{moduleName}\" 中找不到 \"{name}\"",
@@ -77,15 +77,15 @@
         "trailingCommaInFromImport": "不允許不帶括號的尾端逗號",
         "tupleIndexOutOfRange": "索引 {index} 超出類型 {type} 的範圍",
         "typeNotIterable": "類型不可迭代",
-        "typeNotSupportBinaryOperator": "此類型組合不支援運算符 \"{operator}\"",
-        "typeNotSupportBinaryOperatorBidirectional": "此類型組合不支援運算符 \"{operator}\"",
+        "typeNotSupportBinaryOperator": "此類型組合不支援運算子 \"{operator}\"",
+        "typeNotSupportBinaryOperatorBidirectional": "此類型組合不支援運算子 \"{operator}\"",
         "unaccessedClass": "類別 \"{name}\" 未使用",
         "unaccessedFunction": "函式 \"{name}\" 未使用",
         "unaccessedImport": "匯入 \"{name}\" 未使用",
         "unaccessedSymbol": "\"{name}\" 未使用",
         "unaccessedVariable": "變數 \"{name}\" 未使用",
         "unexpectedIndent": "非預期縮排",
-        "unreachableCode": "代碼無法取得\n您的程式邏輯代表這段代碼永遠不會執行"
+        "unreachableCode": "程式碼無法取得\n您的程式邏輯代表這段程式碼永遠不會執行"
     },
     "DiagnosticAddendum": {
         "tupleSizeMismatch": "元素大小不相符；必須是 {expected} 但收到 {received}"
