--- a/packages/pyright-internal/src/localization/simplified.nls.zh-tw.json
+++ b/packages/pyright-internal/src/localization/simplified.nls.zh-tw.json
@@ -43,13 +43,13 @@
         "expectedOpenParen": "缺少左括弧 \"(\"",
         "expectedParamName": "缺少參數名稱",
         "expectedSliceIndex": "缺少索引或分割",
-        "expectedYieldExpr": "yield 表述中應該要有運算式",
+        "expectedYieldExpr": "yield 陳述式中應該要有運算式",
         "globalReassignment": "\"{name}\" 會在全域宣告之前指派",
         "globalRedefinition": "\"{name}\" 已經全域宣告",
         "importResolveFailure": "找不到模組 \"{importName}\"",
         "importSymbolUnknown": "在模組 \"{moduleName}\" 中找不到 \"{name}\"",
         "inconsistentIndent": "縮排與上一行不相符",
-        "inconsistentTabs": "縮排的頁籤和空格的使用不一致",
+        "inconsistentTabs": "縮排的索引標籤和空格的使用不一致",
         "instanceMethodSelfParam": "執行個體方法需要一個 \"self\" 參數",
         "invalidIdentifierChar": "識別元中的無效字元",
         "invalidTokenChars": "token 中的無效字元 \"{text}\"",
