--- a/packages/pyright-internal/src/localization/simplified.nls.zh-tw.json
+++ b/packages/pyright-internal/src/localization/simplified.nls.zh-tw.json
@@ -15,7 +15,7 @@
         "breakOutsideLoop": "\"break\" 只能在 \"while\" 或 \"for\" 迴圈中使用",
         "constructorNoArgs": "\"{type}\" 構造函式不應有引數",
         "continueOutsideLoop": "\"continue\" 只能在 \"while\" 或 \"for\" 迴圈中使用",
-        "delTargetExpr": "運算式不能刪除",
+        "delTargetExpr": "表達式不能刪除",
         "duplicateParam": "複製參數 \"{name}\"",
         "expectedAssignRightHandExpr": "運算式必須在 \"=\" 的右側",
         "expectedBinaryRightHandExpr": "運算式必須在運算子的右側",
@@ -52,7 +52,7 @@
         "inconsistentTabs": "縮排的索引標籤和空格的使用不一致",
         "instanceMethodSelfParam": "執行個體方法需要一個 \"self\" 參數",
         "invalidIdentifierChar": "識別元中的無效字元",
-        "invalidTokenChars": "token 中的無效字元 \"{text}\"",
+        "invalidTokenChars": "通證中的無效字元 \"{text}\"",
         "memberAccess": "無法存取類型 \"{type}\" 的成員 \"{name}\"",
         "memberDelete": "無法刪除類型 \"{type}\" 的成員 \"{name}\"",
         "memberSet": "無法指派類型 \"{type}\" 的成員 \"{name}\"",
