Dutch translation update.

--- a/packages/pyright-internal/src/localization/simplified.nls.nl.json
+++ b/packages/pyright-internal/src/localization/simplified.nls.nl.json
@@ -11,15 +11,15 @@
         "argPositional": "Verwacht positionele argument",
         "argPositionalExpectedOne": "1 positioneel argument verwacht",
         "assignmentTargetExpr": "Expressie kan geen toewijzing doel zijn",
-        "booleanIsLowerCase": "\"{name}\" is niet gedefinieerd, bedoelde u \"{booleanName}\"?",
+        "booleanIsLowerCase": "\"{name}\" is niet gedefinieerd, bedoelde je \"{booleanName}\"?",
         "breakOutsideLoop": "\"break\" kan alleen worden gebruikt binnen een \"terwijl\" of \"voor\" lus",
         "constructorNoArgs": "Geen argumenten verwacht aan \"{type}\" constructor",
         "continueOutsideLoop": "\"doorgaan\" kan alleen worden gebruikt binnen een \"terwijl\" of \"voor\" lus",
         "delTargetExpr": "Expressie kan niet worden verwijderd",
-        "duplicateParam": "Parameter \"{name}\"",
+        "duplicateParam": "Dubbel parameter \"{name}\"",
         "expectedAssignRightHandExpr": "Verwachte expressie rechts van \"=\"",
         "expectedBinaryRightHandExpr": "Verwachte expressie rechts van operator",
-        "expectedClassName": "Klasnaam ontbreekt",
+        "expectedClassName": "Klasse naam ontbreekt",
         "expectedCloseBrace": "Ontbrekend sluitingshaakje \"}\"",
         "expectedCloseBracket": "Ontbrekend sluitingshaakje \"]\"",
         "expectedCloseParen": "Ontbrekend sluitingshaakje \")\"",
@@ -31,34 +31,34 @@
         "expectedFunctionName": "Functienaam ontbreekt na \"def\"",
         "expectedIdentifier": "Ontbrekende ID",
         "expectedImport": "Ontbrekende \"import\"",
-        "expectedImportAlias": "Ontbrekend symbool na \"als\"",
+        "expectedImportAlias": "Ontbrekend symbool na \"as\"",
         "expectedImportSymbols": "Eén of meer symboolnamen verwacht na import",
         "expectedIn": "Ontbrekende \"in\"",
-        "expectedIndentedBlock": "Ontbrekende inspringen",
+        "expectedIndentedBlock": "Ontbrekende inspringingen",
         "expectedInExpr": "Ontbrekende expressie na \"in\"",
         "expectedMemberName": "Lid naam ontbreekt na \".\"",
-        "expectedModuleName": "Ontbrekende modulenaam",
+        "expectedModuleName": "Ontbrekende module naam",
         "expectedNamedParameter": "Parameter met trefwoorden moet \"*\" volgen",
-        "expectedNewlineOrSemicolon": "Onverwachte extra inhoud\nboodschappen moeten één per regel zijn",
+        "expectedNewlineOrSemicolon": "Onverwachte extra inhoud\nVerklaringen moeten één per regel zijn",
         "expectedOpenParen": "Ontbrekend openingshaakje \"(\"",
         "expectedParamName": "Naam van de parameter ontbreekt",
         "expectedSliceIndex": "Ontbrekende index of slice",
-        "expectedYieldExpr": "Verwachte expressie in rendementsverklaring",
+        "expectedYieldExpr": "Verwachte expressie in rendements verklaring",
         "globalReassignment": "\"{name}\" is toegewezen voor de globale declaratie",
         "globalRedefinition": "\"{name}\" was al globaal verklaard",
         "importResolveFailure": "Module \"{importName}\" kon niet worden gevonden",
         "importSymbolUnknown": "\"{name}\" niet gevonden in module \"{moduleName}\"",
         "inconsistentIndent": "Inspringen komt niet overeen met de vorige regel",
         "inconsistentTabs": "Inconsistent gebruik van tabbladen en spaties voor indenten",
-        "instanceMethodSelfParam": "Instantiemethoden hebben een zelf-parameter nodig",
+        "instanceMethodSelfParam": "Instantie methoden hebben een zelf-parameter nodig",
         "invalidIdentifierChar": "Ongeldig teken in id",
         "invalidTokenChars": "Ongeldig teken \"{text}\" in token",
         "memberAccess": "Geen toegang tot lid \"{name}\" voor type \"{type}\"",
-        "memberDelete": "Kan deelnemer niet verwijderen \"{name}\" voor type \"{type}\"",
+        "memberDelete": "Kan lid niet verwijderen \"{name}\" voor type \"{type}\"",
         "memberSet": "Kan lid \"{name}\" niet toewijzen voor type \"{type}\"",
         "moduleNotCallable": "Module kan niet aangeroepen worden",
         "moduleUnknownMember": "\"{name}\" is geen bekend lid van module \"{module}\"",
-        "nonDefaultAfterDefault": "Niet-standaard argument volgt het standaardargument",
+        "nonDefaultAfterDefault": "Niet standaard argument volgt het standaard argument",
         "noOverload": "Argumenten komen niet overeen met parametertypes",
         "objectNotCallable": "Object kan niet aangeroepen worden",
         "obscuredClassDeclaration": "Les \"{name}\" botst met een andere verklaring met dezelfde naam",
@@ -71,15 +71,15 @@
         "paramNameMissing": "Geen parameter genaamd \"{name}\"",
         "positionArgAfterNamedArg": "Positioneel argument kan niet worden weergegeven na trefwoord argumenten",
         "returnOutsideFunction": "\"retour\" kan alleen worden gebruikt binnen een functie",
-        "stringUnsupportedEscape": "Niet-ondersteunde escape-reeks in tekenreeks",
+        "stringUnsupportedEscape": "Niet ondersteunde escape reeks in tekenreeks",
         "stringUnterminated": "String is niet gesloten - aanhalingsteken ontbreekt",
         "symbolIsUndefined": "\"{name}\" is niet gedefinieerd",
-        "trailingCommaInFromImport": "Komma opsporen niet toegestaan zonder omliggende haakjes",
+        "trailingCommaInFromImport": "Komma's aan het einde zijn niet toegestaan zonder haakjes eromheen",
         "tupleIndexOutOfRange": "Index {index} is buiten bereik voor type {type}",
         "typeNotIterable": "Type is niet itereerbaar",
         "typeNotSupportBinaryOperator": "Operator \"{operator}\" niet ondersteund voor deze combinatie van soorten",
         "typeNotSupportBinaryOperatorBidirectional": "Operator \"{operator}\" niet ondersteund voor deze combinatie van soorten",
-        "unaccessedClass": "Les \"{name}\" is ongebruikt",
+        "unaccessedClass": "Klasse \"{name}\" is ongebruikt",
         "unaccessedFunction": "Functie \"{name}\" is ongebruikt",
         "unaccessedImport": "Import \"{name}\" is ongebruikt",
         "unaccessedSymbol": "\"{name}\" is ongebruikt",
