Fixes for Catalan keywords.

--- a/packages/pyright-internal/src/localization/simplified.nls.ca.json
+++ b/packages/pyright-internal/src/localization/simplified.nls.ca.json
@@ -12,9 +12,9 @@
         "argPositionalExpectedOne": "S'esperava 1 argument posicional",
         "assignmentTargetExpr": "L'expressió no pot ser el destí de l'assignació",
         "booleanIsLowerCase": "\"{name}\" no està definit, volies dir \"{booleanName}\"?",
-        "breakOutsideLoop": "\"interrupció\" només es pot utilitzar dins d'un bucle \"mentre\" o \"per a\".",
+        "breakOutsideLoop": "\"break\" (interrupció) només es pot utilitzar dins d'un bucle \"while\" (mentre) o \"for\" (per a).",
         "constructorNoArgs": "No s'esperava cap argument per al constructor \"{type}\".",
-        "continueOutsideLoop": "\"continua\"  només es pot utilitzar dins d'un bucle \"mentre\" o \"per a \".",
+        "continueOutsideLoop": "\"continue\" (continua) només es pot utilitzar dins d'un bucle \"while\" (mentre) o \"for\" (per a).",
         "delTargetExpr": "L'expressió no es pot suprimir",
         "duplicateParam": "Paràmetre duplicat \"{name}\"",
         "expectedAssignRightHandExpr": "Expressió esperada a la dreta de \"=\"",
@@ -25,7 +25,7 @@
         "expectedCloseParen": "Falta el parèntesi de tancament \")\"",
         "expectedColon": "Falta dos punts \":\"",
         "expectedDelExpr": "Falta l'expressió després de \"del\"",
-        "expectedElse": "Falta \"si no\" ",
+        "expectedElse": "Falta \"else\" (si no)",
         "expectedEqualityOperator": "Operador d'igualtat esperat, volies dir \"==\"?",
         "expectedExpr": "Falta expressió",
         "expectedFunctionName": "Falta el nom de la funció després de \"def\"",
@@ -33,9 +33,9 @@
         "expectedImport": "Falta \"import\"",
         "expectedImportAlias": "Falta el símbol després de \"as\"",
         "expectedImportSymbols": "S'esperava un o més noms de símbols després de la importació \"import\"",
-        "expectedIn": "Falta \"en\" ",
+        "expectedIn": "Falta \"in\" (en)",
         "expectedIndentedBlock": "Falta sagnat",
-        "expectedInExpr": "Falta l'expressió després d' \"en\" ",
+        "expectedInExpr": "Falta l'expressió després de \"in\" (en)",
         "expectedMemberName": "Falta el nom del membre després de \".\"",
         "expectedModuleName": "Falta el nom del mòdul",
         "expectedNamedParameter": "El paràmetre de paraula clau ha d'anar després de \"*\"",
