Update Korean translations (#30)
No other updates are available in Crowdin.

--- a/packages/pyright-internal/src/localization/simplified.nls.ko.json
+++ b/packages/pyright-internal/src/localization/simplified.nls.ko.json
@@ -1,17 +1,17 @@
 {
     "Diagnostic": {
-        "argAssignment": "인자가 매개변수 유형과 일치하지 않음",
-        "argAssignmentFunction": "인자가 \"{functionName}\" 함수의 매개변수 유형과 일치하지 않음",
-        "argAssignmentParam": "인자가 \"{paramName}\" 함수의 매개변수 유형과 일치하지 않음",
-        "argAssignmentParamFunction": "인자가 \"{paramName}\" 함수의 매개변수 유형과 일치하지 않음",
-        "argMissingForParam": "{name} 매개변수의 인자가 누락됨",
+        "argAssignment": "오류: 인자가 매개변수 유형과 일치하지 않습니다.",
+        "argAssignmentFunction": "오류: 인자가 \"{functionName}\" 함수의 매개변수 유형과 일치하지 않습니다.",
+        "argAssignmentParam": "오류: 인자가 \"{paramName}\" 함수의 매개변수 유형과 일치하지 않습니다.",
+        "argAssignmentParamFunction": "오류: 인자가 \"{paramName}\" 함수의 매개변수 유형과 일치하지 않습니다.",
+        "argMissingForParam": "{name} 매개변수의 인자가 누락되어 있습니다.",
         "argMissingForParams": "{name} 매개변수들의 인자가 누락됨",
-        "argMorePositionalExpectedCount": "위치 인자가 {expected}개 더 필요함",
-        "argMorePositionalExpectedOne": "위치 인자가 1개 더 필요함",
-        "argPositional": "위치 인자가 필요함",
-        "argPositionalExpectedOne": "위치 인자가 1개 필요함",
-        "assignmentTargetExpr": "표현식은 할당 대상이 될 수 없음",
-        "booleanIsLowerCase": "\"{name}\"(이)가 정의되지 않았습니다. \"{booleanName}\"입니까?",
+        "argMorePositionalExpectedCount": "위치 인자가 {expected}개 더 필요합니다.",
+        "argMorePositionalExpectedOne": "위치 인자를 1개 더 예상했습니다.",
+        "argPositional": "위치 인자가 필요합니다.",
+        "argPositionalExpectedOne": "위치 인자가 1개 필요합니다.",
+        "assignmentTargetExpr": "수학식은 값을 지정하는 대상이 될 수 없습니다.",
+        "booleanIsLowerCase": "변수 \"{name}\"은(는) 정의되지 않았습니다. \"{booleanName}\" 변수를 쓰려 했나요?",
         "breakOutsideLoop": "\"break\"는 \"while\" 또는 \"for\" 루프에서만 사용될 수 있음",
         "constructorNoArgs": "\"{type}\" 생성자에는 인자가 필요하지 않음",
         "continueOutsideLoop": "\"continue\"는 \"while\" 또는 \"for\" 루프에서만 사용될 수 있음",
@@ -78,7 +78,7 @@
         "tupleIndexOutOfRange": "{index} 인덱스가 {type} 유형의 범위 밖임",
         "typeNotIterable": "Type은 연속형이 아님",
         "typeNotSupportBinaryOperator": "\"{operator}\" 연산자가 해당 조합 유형을 지원하지 않음",
-        "typeNotSupportBinaryOperatorBidirectional": "\"{operator}\" 연산자가 해당 조합 유형을 지원하지 않음",
+        "typeNotSupportBinaryOperatorBidirectional": "오류: \"{operator}\" 연산자가 해당 조합 유형을 지원하지 않습니다.",
         "unaccessedClass": "\"{name}\" 클래스가 사용되지 않음",
         "unaccessedFunction": "\"{name}\" 함수가 사용되지 않음",
         "unaccessedImport": "\"{name}\" 가져오기가 사용되지 않음",
