--- a/packages/pyright-internal/src/localization/simplified.nls.en-us.json
+++ b/packages/pyright-internal/src/localization/simplified.nls.en-us.json
@@ -58,6 +58,7 @@
         "memberSet": "Cannot assign member \"{name}\" for type \"{type}\"",
         "moduleNotCallable": "Module is not callable",
         "moduleUnknownMember": "\"{name}\" is not a known member of module \"{module}\"",
+        "microbitVersionApiUnsupported": "\"{name}\" is not supported on a {device}",
         "nonDefaultAfterDefault": "Non-default argument follows default argument",
         "noOverload": "Arguments do not match parameter types",
         "objectNotCallable": "Object is not callable",
