Add warning diagnostic when using V2 api

--- a/packages/pyright-internal/src/localization/simplified.nls.en-us.json
+++ b/packages/pyright-internal/src/localization/simplified.nls.en-us.json
@@ -58,6 +58,9 @@
         "memberSet": "Cannot assign member \"{name}\" for type \"{type}\"",
         "moduleNotCallable": "Module is not callable",
         "moduleUnknownMember": "\"{name}\" is not a known member of module \"{module}\"",
+        "microbitV2ClassMethodUse": "The \"{methodName}\" method on the \"{className}\" class cannot be used with a {device}",
+        "microbitV2ModuleMemberUse": "\"{name}\" from the \"{moduleName}\" module cannot be used with a {device}",
+        "microbitV2ModuleUse": "\"{moduleName}\" cannot be used with a {device}",
         "nonDefaultAfterDefault": "Non-default argument follows default argument",
         "noOverload": "Arguments do not match parameter types",
         "objectNotCallable": "Object is not callable",
