--- a/packages/pyright-internal/src/localization/simplified.nls.fr.json
+++ b/packages/pyright-internal/src/localization/simplified.nls.fr.json
@@ -58,6 +58,7 @@
         "memberSet": "Impossible d'affecter le membre \"{name}\" pour le type \"{type}\"",
         "moduleNotCallable": "Le module n'est pas appelable",
         "moduleUnknownMember": "\"{name}\" n'est pas un membre connu du module \"{module}\"",
+        "microbitVersionApiUnsupported": "\"{name}\" is not supported on a {device}",
         "nonDefaultAfterDefault": "Argument sans valeur par défaut suit un argument ayant une valeur par défaut",
         "noOverload": "Les arguments ne correspondent pas aux types des paramètres",
         "objectNotCallable": "L'objet n'est pas appelable",
